# sr_ur_arm

./: .gitignore  README.md  combined_hardware.md  jenkins.yml  repository.rosinstall
sr_record_playback/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_record_playback/pose_data/: pose1.yaml  pose2.yaml
sr_record_playback/scripts/: pose_mover  pose_recorder  trajectory_player  trajectory_recorder
sr_record_playback/trajectory_data/: traj_test.txt  traj_test2.txt
sr_trajectory_record_playback/: CMakeLists.txt
sr_trajectory_record_playback/trajectory_data/: traj_test10.txt  traj_test3.txt
sr_ur_arm/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_ur_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_ur_bringup/launch/: sr_ur_left.launch  sr_ur_right.launch  sr_ur_system.launch
sr_ur_bringup/robot_programs/: ur_reset_program  ur_robot_program
sr_ur_controller/: CHANGELOG.rst  CMakeLists.txt  controller_plugins.xml  package.xml
sr_ur_controller/config/: left_ur_arm_controller.yaml
sr_ur_controller/include/sr_ur_controller/: sr_ur_common.hpp  sr_ur_control_server.hpp  sr_ur_controller.hpp  sr_ur_driver.hpp  sr_ur_event_loop.hpp  sr_ur_hardware_messages.hpp  sr_ur_program_loader.hpp  sr_ur_read_write.hpp  sr_ur_robot_state_client.hpp
sr_ur_controller/src/: sr_ur_control_server.cpp  sr_ur_controller.cpp  sr_ur_driver.cpp  sr_ur_event_loop.cpp  sr_ur_program_loader.cpp  sr_ur_read_robot_state.cpp  sr_ur_read_write.cpp  sr_ur_robot_state_client.cpp
sr_ur_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_ur_description/urdf/: biarm.urdf.xacro  srh_ur10.urdf.xacro
sr_ur_hardware/: CMakeLists.txt  hardware_plugin.xml  package.xml
sr_ur_hardware/include/sr_ur_controller/: sr_ur_control_server.hpp  sr_ur_program_loader.hpp
sr_ur_hardware/include/sr_ur_robot_hw/: sr_ur_hardware.hpp
sr_ur_hardware/src/: sr_ur_control_server.cpp  sr_ur_event_loop.cpp  sr_ur_hardware.cpp  sr_ur_robot_state_client.cpp
sr_ur_launch/: CMakeLists.txt  README.md  package.xml
sr_ur_launch/config/: configuration.yaml  la_trajectory_controller.yaml  ra_group_position_controller.yaml  ra_trajectory_controller.yaml
sr_ur_launch/description/: ur10_left_robot.urdf.xacro  ur10_right_robot.urdf.xacro  ur10_robot.urdf.xacro
sr_ur_launch/launch/: left_arm.launch  right_arm.launch  sr_ur_arm_hand.launch
sr_ur_launch/scripts/: check_arms_ready  teach_mode_node
sr_ur_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_ur_msgs/srv/: SetPayload.srv  SetSpeed.srv
sr_ur_robot_hw/: CMakeLists.txt  package.xml  robot_hw_plugin.xml
sr_ur_robot_hw/config/: la_sr_ur_robot_hw.yaml  ra_sr_ur_robot_hw.yaml  ur_hardware_interface.yaml
sr_ur_robot_hw/include/sr_ur_robot_hw/: sr_ur_config.hpp  sr_ur_control_server.hpp  sr_ur_driver.hpp  sr_ur_driver_test.hpp  sr_ur_event_loop.hpp  sr_ur_hardware_messages.hpp  sr_ur_program_loader.hpp  sr_ur_robot_hw.hpp  sr_ur_robot_state_client.hpp
sr_ur_robot_hw/src/: sr_ur_config.cpp  sr_ur_control_server.cpp  sr_ur_driver.cpp  sr_ur_event_loop.cpp  sr_ur_program_loader.cpp  sr_ur_robot_hw.cpp  sr_ur_robot_state_client.cpp
