<package>
  <name>sr_trajectory_record_playback</name>
  <version>0.1.0</version>
  <description>trajectory record and playback scripts</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://ros.org/wiki/sr_ur_arm</url>
  <url type="repository">https://github.com/shadow-robot/sr_ur_arm</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_ur_arm/issues</url>

  <author>Manos Nikoladis</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>sr_ur_robot_hw</run_depend>
</package>
