<package>
  <name>sr_ur_arm</name>
  <version>0.1.0</version>
  <description>Control a UR arm from ros_ethercat package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>
  <license>GPL</license>
  
  <url type="website">http://ros.org/wiki/sr_ur_arm</url>
  <url type="repository">https://github.com/shadow-robot/sr_ur_arm</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_ur_arm/issues</url>

  <author>Manos Nikolaidis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sr_ur_controller</run_depend>
  <run_depend>sr_ur_bringup</run_depend>
  <run_depend>sr_trajectory_record_playback</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
