<package>
  <name>sr_ur_controller</name>
  <version>0.0.0</version>
  <description>ur arm controller for ros_ethercat</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sr_ur_arm</url>
  <url type="repository">https://github.com/shadow-robot/sr_ur_arm</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_ur_arm/issues</url>

  <author email="software@shadowrobot.com">Manos Nikolaidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>ros_ethercat_model</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>ros_ethercat_model</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>ur_description</run_depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>

</package>
