<?xml version="1.0"?>
<package>
  <name>sr_ur_msgs</name>
  <version>0.0.1</version>
  <description>Contains messages for the ur arm controller</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/sr_ur_arm</url>
  <url type="repository">https://github.com/shadow-robot/sr_ur_arm</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_ur_arm/issues</url>
  
  <author email="software@shadowrobot.com">Toni Oliver</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
